fix/86c96fk2y-FE-fixed-sidebar-layout-shift

--- a/src/app/features/Photos/PhotoGalleryLayout/PhotoGalleryLayout.module.scss
+++ b/src/app/features/Photos/PhotoGalleryLayout/PhotoGalleryLayout.module.scss
@@ -1,10 +1,9 @@
 .wrapper {
   display: grid;
-  grid-template-columns: 1fr 2.5fr 1fr;
+  grid-template-columns: 300px 1fr 300px;
   grid-template-rows: auto 1fr;
   gap: var(--gap-xl);
   min-height: 100vh;
-  width: calc(100% - var(--scrollbar-width, 0px));
   max-width: 1400px;
   margin: 0 auto;
   background: var(--bg-page);
